--- a/templates/dashboards/sales/my_orders.html
+++ b/templates/dashboards/sales/my_orders.html
@@ -122,6 +122,9 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
             padding: 1rem;
             /* margin-bottom: 1.5rem; */
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
         }
 
         /* Responsive */
@@ -185,7 +188,7 @@
 
 
         .main-content-wrapper {
-            padding-top: 40px;
+            padding-top: 100px;
             min-height: 100vh;
         }
 
@@ -1403,10 +1406,19 @@
                                     </svg>
                                 </button>
 
-                                ` : ''}
+                                ` : `
+                                <button class="glass-btn" title="Download PDF" onclick="
+                                    event.stopPropagation();
+                                    window.open('${window.location.origin}/sales/download_invoice_pdf/${invoiceObj.number}', '_blank');
+                                ">
+                                    <!-- PDF File Icon -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="20" height="20">
+                                        <path d="M14 2H6a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h12a2 2 0 0 0 2-2V8l-6-6zm1 7V3.5L20.5 9H15zM7 13h2v5H7v-5zm3 0h1.5a2.5 2.5 0 1 1 0 5H10v-5zm1.5 3.5a1 1 0 0 0 0-2H11v2h0.5zM16 13h2v1h-1v1h1v1h-2v-5z"/>
+                                    </svg>
+                                </button>`}
 
                                 
-                                ${invoiceObj.delivery_mode === 'post' || invoiceObj.delivery_mode === 'transport' ? `
+                                ${invoiceObj.trackingStatus < 5 ? ` 
 
                                     <button class="glass-btn danger" title="Cancel Order" onclick="event.stopPropagation(); openCancelOrderModal('${invoiceObj.live_order_track_id}','${invoiceObj.number}', this)">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="1.8" viewBox="0 0 24 24">
