--- a/templates/dashboards/sales/main.html
+++ b/templates/dashboards/sales/main.html
@@ -113,6 +113,9 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
             padding: 1rem;
             /* margin-bottom: 1.5rem; */
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
         }
 
         /* Responsive */
@@ -415,7 +418,7 @@
 
                 </div>
 
-                <div class="container-fluid px-4" style="padding-top: 30px;padding-bottom: 30px;">
+                <div class="container-fluid px-4" style="padding-top: 80px;padding-bottom: 30px;">
 
                     <div id="sales-dashboard-component">
                         <!-- Initial Loader -->
