--- a/templates/dashboards/admin/events.html
+++ b/templates/dashboards/admin/events.html
@@ -625,6 +625,7 @@
             <li><a href="/admin/users" class="sidebar-link"><i class="bi bi-people"></i> <span>Users</span></a></li>
             <li><a href="/admin/customers" class="sidebar-link"><i class="bi bi-person-lines-fill"></i><span>Customers</span></a></li>
             <li><a href="/admin/products" class="sidebar-link"><i class="bi bi-box-seam"></i><span>Products</span></a></li>
+            <li><a href="/manager/transport" class="sidebar-link"><i class="bi bi-truck"></i><span>Transport</span></a></li>
             <li><a href="/admin/events" class="sidebar-link active"><i class="bi-megaphone"></i> <span>Events</span></a></li>
             <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a></li>
         </ul>
