--- a/templates/dashboards/manager/manager.html
+++ b/templates/dashboards/manager/manager.html
@@ -641,6 +641,7 @@
             <li><a href="/manager/users" class="sidebar-link"><i class="bi bi-people"></i> <span>Users</span></a></li>
             <li><a href="/manager/customers" class="sidebar-link"><i class="bi bi-person-lines-fill"></i><span>Customers</span></a></li>
             <li><a href="/manager/products" class="sidebar-link"><i class="bi bi-box-seam"></i><span>Products</span></a></li>
+            <li><a href="/manager/transport" class="sidebar-link"><i class="bi bi-truck"></i><span>Transport</span></a></li>
             <li><a href="/manager/events" class="sidebar-link"><i class="bi-megaphone"></i> <span>Events</span></a></li>
             <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a></li>
         </ul>
