--- a/templates/dashboards/manager/users.html
+++ b/templates/dashboards/manager/users.html
@@ -832,6 +832,7 @@
             <li><a href="/manager/users" class="sidebar-link active"><i class="bi bi-people"></i> <span>Users</span></a></li>
             <li><a href="/manager/customers" class="sidebar-link"><i class="bi bi-person-lines-fill"></i><span>Customers</span></a></li>
             <li><a href="/manager/products" class="sidebar-link"><i class="bi bi-box-seam"></i><span>Products</span></a></li>
+            <li><a href="/manager/transport" class="sidebar-link"><i class="bi bi-truck"></i><span>Transport</span></a></li>
             <li><a href="/manager/events" class="sidebar-link"><i class="bi-megaphone"></i> <span>Events</span></a></li>
             <li><a href="/logout" class="sidebar-link"><i class="bi bi-box-arrow-right me-2"></i><span>Logout</span></a></li>
         </ul>
@@ -1020,9 +1021,21 @@
                                     <button class="btn btn-sm btn-primary edit-user" data-id="${data.id}" title="Edit">
                                         <i class="bi bi-pencil"></i>
                                     </button>
+
+                                    ${data.active === 1 ? 
+                                    `
                                     <button class="btn btn-sm btn-danger delete-user" data-id="${data.id}" title="Delete">
                                         <i class="bi bi-trash"></i>
                                     </button>
+                                    ` 
+                                    : 
+                                    `
+                                    <button class="btn btn-sm btn-success restore-user" data-id="${data.id}" title="Restore">
+                                        <i class="bi bi-arrow-counterclockwise"></i>
+                                    </button>
+
+                                    `
+                                    }
                                 </div>
                             `;
                         }
